static/styles/style.scss
/* ... */
h1, h2, h3, h4, h5, h6 {
    margin-bottom: 20px;
    text-transform: none;
}

h1 { font-size: 26px; }
h2 { font-size: 24px; }
h3 { font-size: 20px; margin-bottom: 20px; }
h4 { font-size: 18px; margin-bottom: 18px; }
h5 { font-size: 16px; margin-bottom: 15px; }
h6 { font-size: 14px; margin-bottom: 12px; }

p {
    line-height: 1.8;
    margin: 0 0 30px;
}

a {
    color: $primary;
    text-decoration: none;
}

ul, ol {
    line-height: 1.4;
    margin: 0 0 20px;

    ul, ol { margin: 10px 0 0 20px; }

    li {
        margin: 0 0 2px;

        &:last-of-type { margin-bottom: 0; }
    }
}

blockquote {
    border-left: 1px dotted $primary;
    margin: 40px 0;
    padding: 5px 30px;

    p {
        color: #AEADAD;
        display: block;
        font-style: italic;
        margin: 0;
        width: 100%;
    }
}

img {
    display: block;
    margin: 40px 0;
    width: auto;
    max-width: 100%;
}

pre {
    background: #F1F0EA;
    border: 1px solid #DDDBCC;
    border-radius: 3px;
    margin: 0 0 20px;
    padding: 10px;
    font-size: 16px;

    code {
        padding: 0;
    }
}

code {
    padding: 2px 4px;
    font-size: 90%;
    color: $primary;
    background-color: #F1F0EA;
    border-radius: 4px
}

hr {
    border: none;
    border-bottom: 1px dotted #303030;
    margin: 45px 0;
}

table {
    margin-bottom:40px;
    width: 100%;

    tbody > tr:nth-child(odd) > td,
    tbody > tr:nth-child(odd) > th {
        background-color: #f7f7f3;
    }

    th {
        padding: 0 10px 10px;
        text-align: left;
    }

    td { padding: 10px; }

    tr { border-bottom: 1px dotted #AEADAD; }
}

::selection {
    background: #FFF5B8;
    color: #000;
    display: block;
}

::-moz-selection {
    background: #FFF5B8;
    color: #000;
    display: block;
}

.fluid-width-video-wrapper { margin-bottom: 40px; }

.hidden {
    text-indent: -9999px;
    visibility: hidden;
    display: none;
}

.clearfix {
    &:after{
        content: "";
        display: table;
        clear: both;
    }
}

/* ============================================================ */
/* General Appearance */
/* ============================================================ */

.container {
    margin: 0 auto;
    position: relative;
    width: 100%;
    max-width: 889px;
}

#wrapper {
    height: auto;
        min-height: 100%;
    /* This must be the same as the height of the footer */
    margin-bottom: -265px;

    &:after {
        content: "";
        display: block;
        /* This must be the same as the height of the footer */
        height: 265px;
    }
}

.button {
    background: $secondary;
    border: none;
    border-radius: 3px;
    color: #FEFEFE;
    font-size: 14px;
    font-weight: 700;
    padding: 10px 12px;
    text-transform: uppercase;

    &:hover { background: $primary; }
}

.button-square {
    background: $primary;
    color: #FFF;
    float: left;
    font-size: 17px;
    margin: 0 0 0 10px;
    padding: 3px 8px 4px;

    &:hover { background: $secondary; }
}

.error {
    text-align: center;
}

.comments {
    margin-top: 10px;
}

/* ============================================================ */
/* Site Header */
/* ============================================================ */

.site-header {
    padding: 40px 0 0;
    overflow: auto;
    text-align: center;
    text-transform: uppercase;
}

.site-title-wrapper {
    display: table;
    margin: 0 auto;
}

.site-title {
    float: left;
    font-size: 14px;
    font-weight: 600;
    margin: 0;
    text-transform: uppercase;

    a {
        float: left;
        background: $primary;
        color: #FEFEFE;
        padding: 5px 10px 6px;

        &:hover { background: $secondary; }
    }
}
.site-logo {
    display: block;

    img { margin: 0; }
}

.site-nav {
    list-style: none;
    margin: 28px 0 10px;
    padding: 0;
}

.site-nav-item {
    display: inline-block;
    font-size: 14px;
    font-weight: 700;
    margin: 0 10px;

    a:hover { color: #424242; }
}

/* ============================================================ */
/* Post */
/* ============================================================ */

#latest-post { display: none; }

.post-container { margin: 0 40px; }

.post-header {
    border-bottom: 6px solid $secondary;
    margin: 0 0 20px;
    padding: 0 0 20px;
    text-align: center;
    text-transform: uppercase;
}

.post-title,
.page-title {
    font-size: 52px;
    font-weight: 700;
    margin: 15px 0;
    text-align: center;
    text-transform: uppercase;
}

.page-title { margin: 15px 40px; }

.post-date,
.blog-description {
    color: #AEADAD;
    font-size: 14px;
    font-weight: 600;
    line-height: 1;
    margin: 25px 0 0;

    a { color: #AEADAD; }
    a:hover { color: $primary; }

    &:after {
        border-bottom: 1px dotted $secondary;
        content: "";
        display: block;
        margin: 40px auto 0;
        width: 100px;
    }
}

.post-content {
    a:hover {
        border-bottom: 1px dotted $primary;
        padding: 0 0 2px;
    }

    &:last-child { margin-bottom: 0; }

    .footnote {
        border-spacing: 0;
        margin-bottom: 0;

        .label + td {
            width: 100%;
        }
    }

    .gist {
        tr {
            border-bottom: 0;
        }
    }
}

.post-footer { margin-top: 5px; }

.post-tags,
.share {
    color: #AEADAD;
    font-size: 14px;

    span { font-weight: 600; }
}

.post-tags {
    float: left;
    margin: 3px 0 0;
    a:hover { color: $secondary; }
}

.share {
    float: right;

    a {
        background: $primary;
        color: #FFF;
        display: inline-block;
        font-size: 16px;
        margin-left: 5px;
        padding: 5px 0 4px;
        width: 30px;
        text-align: center;
    }

    a:hover { background: $secondary; }
}

.post-navigation {
    display: table;
    margin: 70px auto 100px;
}
/* ... */

